k8s/db-mssql-linux.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-combined.yml
    kompose.version: 1.2.0 (99f88ef)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: "Y"
        - name: SA_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mssql
              key: SA_PASSWORD
        # This will default to Developer edition. For production, get a license and uncomment this.
        # - name: MSSQL_PID
        #   value: "Standard"
        image: mcr.microsoft.com/mssql/server:2017-latest-ubuntu
        name: db
        ports:
        - containerPort: 1433
        resources: {}
      nodeSelector:
        beta.kubernetes.io/os: linux
      restartPolicy: Always
