k8s/fabrikamfiber.web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-combined.yml
    kompose.version: 1.2.0 (99f88ef)
  creationTimestamp: null
  labels:
    io.kompose.service: fabrikamfiber.web
  name: fabrikamfiberweb
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  type: "LoadBalancer"
  selector:
    io.kompose.service: fabrikamfiber.web
