k8s/fabrikamfiber.web-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fabrikamfiber.web
  name: fabrikamfiberweb
spec:
  ports:
  - port: 80
  type: "ClusterIP"
  selector:
    app: fabrikamfiber.web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: fabrikamfiberweb-ingress
spec:
  rules:
    - host: rascally.test.ogfg.link
      http:
        paths:
          - backend:
              serviceName: fabrikamfiberweb
              servicePort: 80
            path: /
